--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
    <!-- favicons
 	================================================== -->
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="fav1.png">
 
 </head>
 
@@ -113,8 +113,8 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Hey! I am <b>Ritik Kanotra</b>, another geek who likes to play with code, help society with code and most important "<b><i>love to code</i></b>".</p>
-   				<p class="lead">I love participating in various <b>Competitive Programming</b> competitions and regularly code on platforms like Codechef, Hackerrank, Hackerearth etc. As a <b>fresher</b> I am curious to know the machinery of corporate world by becoming a part of it, not just a part, but also to contribute more or less to it.</p>
+   				<p class="lead">Hey! I am Ritik Kanotra, another geek who likes to play with code, help society with code and most important "love to code".</p>
+   				<p class="lead">I love participating in various Competitive Programming competitions and regularly code on platforms like Codechef, Hackerrank, Hackerearth etc. As a fresher I am curious to know the machinery of corporate world by becoming a part of it, not just a part, but also to contribute more or less to it.</p>
    			</div>   			
 
    		</div>   		
@@ -193,7 +193,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="#" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="https://www.dropbox.com/s/1dr2qyx2nguw5ii/resume.png?dl=1" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
@@ -376,7 +376,7 @@
    			<h5>Portfolio</h5>
    			<h1>Check Out Some of My Works.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">Success is no accident. It is hard work, perseverance, learning, studying, sacrifice and most of all, love of what you are doing or learning to do.<br>- Pele</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -386,17 +386,17 @@
    		<div class="col-twelve">
 
    			<!-- portfolio-wrapper -->
-	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
+	         <div id="folio-wrapper" class="block-1-3 block-mob-full stack">
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/liberty.jpg" alt="Liberty">
+	               	<img src="images/portfolio/cards-bookshelf.png" alt="Liberty">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Liberty</h3>	     					    
+		     					       <h3 class="folio-title">BookShelf.com</h3>	     					    
 		     					    	 <span class="folio-types">
-		     					       	  Graphic Design
+		     					       	  Web Development
 		     					       </span>
 		     					   </div>	                      	
 	                     </div>                    
@@ -406,61 +406,29 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/shutterbug.jpg" alt="Shutterbug">
+	               	<img src="images/portfolio/cards-score-keeper.png" alt="Shutterbug">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Shutterbug</h3>	     					    
+	                     		<h3 class="folio-title">Score Keeper</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  Android Development
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
 	                  </a>
 	               </div>
 	        		</div> <!-- /folio-item -->
-
-	            <div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="images/portfolio/clouds.jpg"alt="Clouds">
-	                  <a href="#modal-03" class="overlay">             		                  
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Clouds</h3>	     					    
-		     					    	<span class="folio-types">
-		     					       	  Web Design
-		     					      </span>		     		
-		     					   </div> 	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-	        		</div> <!-- /folio-item -->
-
-	            <div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="images/portfolio/beetle.jpg" alt="Beetle">
-	                  <a href="#modal-04" class="overlay">                  	                 
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Beetle</h3>	     					    
-		     					    	<span class="folio-types">
-		     					       	  Branding
-		     					      </span>		     		
-		     					   </div>  	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-	        		</div> <!-- /folio-item -->     
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
-	                  <a href="#modal-05" class="overlay">             		                  
+	               	<img src="images/portfolio/cards-miwok.png" alt="Shutterbug">
+	               	<a href="#modal-03" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Lighthouse</h3>	     					    
+	                     		<h3 class="folio-title">Miwok App</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Development
+		     					       	  Android Development
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -468,39 +436,25 @@
 	               </div>
 	        		</div> <!-- /folio-item -->
 
-	            <div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="images/portfolio/salad.jpg" alt="Salad">
-	                  <a href="#modal-06" class="overlay">
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Salad</h3>	     					    
-		     					    	<span class="folio-types">
-		     					       	  Branding
-		     					      </span>		     		
-		     					   </div>	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-	        		</div> <!-- /folio-item -->   
+	               
 
 	            <!-- modal popups - begin
 	            ============================================================= -->
 	            <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-liberty.jpg" alt="" />
+				     		<!-- <img src="images/portfolio/cards-bookshelf.png" alt="" /> -->
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Liberty</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>BookShelf.com</h4>		      
+					      <p>BookShelf.com aims to provide all the well known standard books in well categorized format, all accumulated in one place i.e. website. It will help the students and learners and to find probably the best books of the world in a particular field.</p>
 
 					      <div class="categories">Web Development</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://github.com/ritikkanotra/BookShelf.com" target="_blank">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -509,18 +463,18 @@
 				   <div id="modal-02" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
+				     		<!-- <img src="images/portfolio/modals/m-shutterbug.jpg" alt="" /> -->
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Shutterbug</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Score Keeper</h4>		      
+					      <p>This app is designed to store the score of different teams in a cricket match.</p>
 
-					      <div class="categories">Web Design</div>			               
+					      <div class="categories">Android Development</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://github.com/ritikkanotra/score-keeper-android-app" target="_blank">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -529,18 +483,18 @@
 				   <div id="modal-03" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-clouds.jpg" alt="" />
+				     		<!-- <img src="images/portfolio/modals/m-clouds.jpg" alt="" /> -->
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Clouds</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Miwok</h4>		      
+					      <p>Application to help people to learn Miwok local language. This app displays lists of vocabulary words for the user to learn the Miwok language.</p>
 
-					      <div class="categories">Web Design</div>			               
+					      <div class="categories">Android Development</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://github.com/ritikkanotra/miwok-android-app" target="_blank">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
