--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
       </form>
     </div>
     <footer>
-      © Made with ❤️ by <img src="appodex_dev_ico_white.png" style="height: 40px; width: auto; margin-bottom: 5px; margin-left: 3px;" alt="">
+      © Made with ❤️ by <a href="https://ritikkanotra.me/" target="_blank"><img src="ritikkanotra_logo_light.png" style="height: 20px; width: auto; margin-bottom: 10px; margin-left: 3px;" alt=""></a>
     </footer>
     <!-- --------------------------------------------------------------------------------------------------------------------------------------- -->
     <script type="text/javascript" src="script.js"></script>
