Add Project: Devpost

--- a/index.html
+++ b/index.html
@@ -269,13 +269,13 @@
             </ul>
             <!-- <a href="">more...</a> -->
             <div style="position: absolute; bottom: 5px; right: 0px;">
-              <a href="https://github.com/ritikkanotra/coronavirus-tracker-android-app" style="position: absolute; right: 70px;">
+              <a href="https://github.com/ritikkanotra/coronavirus-tracker-android-app" target="_blank" style="position: absolute; right: 70px;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
                   <img src="https://img.icons8.com/fluent/48/000000/github.png" style="height: 32px;
                   width: 32px" />
                 </div>
               </a>
-              <a href="https://urlf.in/coronavirus_tracker_apk" style="display: inline-block;">
+              <a href="https://urlf.in/coronavirus_tracker_apk" target="_blank" style="display: inline-block;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px;">
                     <img src="https://img.icons8.com/color/48/000000/android-os.png" style="height: 32px;
                     width: 32px" />
@@ -303,7 +303,7 @@
             </ul>
             <!-- <a href="">more...</a> -->
             <div style="position: absolute; bottom: 5px; right: 0px;">
-              <a href="https://play.google.com/store/apps/details?id=com.app.kalakaar" style="display: inline-block;">
+              <a href="https://play.google.com/store/apps/details?id=com.app.kalakaar" target="_blank" style="display: inline-block;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
                   <img src="https://img.icons8.com/color/48/000000/google-play.png" style="height: 32px;
                   width: 32px" />
@@ -338,7 +338,7 @@
             </ul>
             <!-- <a href="">more...</a> -->
             <div style="position: absolute; bottom: 5px; right: 0px;">
-              <a href="https://play.google.com/store/apps/details?id=com.pvaindia.filemanager" style="display: inline-block;">
+              <a href="https://play.google.com/store/apps/details?id=com.pvaindia.filemanager" target="_blank" style="display: inline-block;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
                   <img src="https://img.icons8.com/color/48/000000/google-play.png" style="height: 32px;
                   width: 32px" />
@@ -372,13 +372,13 @@
             </ul>
             <!-- <a href="">more...</a> -->
             <div style="position: absolute; bottom: 5px; right: 0px;">
-              <a href="https://google.com" style="position: absolute; right: 70px;">
+              <a href="https://google.com" target="_blank" style="position: absolute; right: 70px;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
                   <img src="https://img.icons8.com/fluent/48/000000/github.png" style="height: 32px;
                   width: 32px" />
                 </div>
               </a>
-              <a href="https://google.com" style="display: inline-block;">
+              <a href="https://google.com" target="_blank" style="display: inline-block;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px;">
                     <img src="https://img.icons8.com/color/48/000000/android-os.png" style="height: 32px;
                     width: 32px" />
@@ -406,13 +406,13 @@
             </ul>
             <!-- <a href="">more...</a> -->
             <div style="position: absolute; bottom: 5px; right: 0px;">
-              <a href="https://google.com" style="position: absolute; right: 70px;">
+              <a href="https://google.com" target="_blank" style="position: absolute; right: 70px;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
                   <img src="https://img.icons8.com/fluent/48/000000/github.png" style="height: 32px;
                   width: 32px" />
                 </div>
               </a>
-              <a href="https://google.com" style="display: inline-block;">
+              <a href="https://google.com" target="_blank" style="display: inline-block;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px;">
                     <img src="https://img.icons8.com/color/48/000000/android-os.png" style="height: 32px;
                     width: 32px" />
@@ -440,13 +440,13 @@
             </ul>
             <!-- <a href="">more...</a> -->
             <div style="position: absolute; bottom: 5px; right: 0px;">
-              <a href="https://github.com/ritikkanotra/ritikkanotra.github.io" style="position: absolute; right: 70px;">
+              <a href="https://github.com/ritikkanotra/ritikkanotra.github.io" target="_blank" style="position: absolute; right: 70px;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
                   <img src="https://img.icons8.com/fluent/48/000000/github.png" style="height: 32px;
                   width: 32px" />
                 </div>
               </a>
-              <a href="https://ritikkanotra.me" style="display: inline-block;">
+              <a href="https://ritikkanotra.me" target="_blank" style="display: inline-block;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px;">
                     <img src="https://img.icons8.com/color/48/000000/domain.png" style="height: 32px;
                     width: 32px" />
@@ -476,13 +476,49 @@
             </ul>
             <!-- <a href="">more...</a> -->
             <div style="position: absolute; bottom: 5px; right: 0px;">
-              <a href="https://github.com/ritikkanotra/csbookshelf" style="position: absolute; right: 70px;">
+              <a href="https://github.com/ritikkanotra/csbookshelf" target="_blank" style="position: absolute; right: 70px;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
                   <img src="https://img.icons8.com/fluent/48/000000/github.png" style="height: 32px;
                   width: 32px" />
                 </div>
               </a>
-              <a href="http://csbookshelf.herokuapp.com/" style="display: inline-block;">
+              <a href="http://csbookshelf.herokuapp.com/" target="_blank" style="display: inline-block;">
+                <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px;">
+                    <img src="https://img.icons8.com/color/48/000000/domain.png" style="height: 32px;
+                    width: 32px" />
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-entity my-card">
+          <div style="position: relative;">
+            <img src="https://devpost1.herokuapp.com/static/assets/images/187_banner_u.png">
+            <!-- <img src="https://image.freepik.com/free-vector/online-library-app-reading-banner_33099-1733.jpg"> -->
+          </div>
+          <div class="content">
+            
+            <h3 style="font-weight: bolder;">Devpost</h3>
+            <ul>
+              
+              <li>Web Application (Mini Project)</li>
+              <li>Pyhton, SQLite, Flask, Jinja</li>
+              <li>Modern Design and Fluent UI</li>
+              <li>HTML, CSS, Javascript, Bootstrap</li>
+              <li>Desktop/Laptop Optimized</li>
+              <li>Features: Authentication, Category, Like/Dislike etc.</li>
+              <li>WYSIWYG Editor</li>
+            </ul>
+            <!-- <a href="">more...</a> -->
+            <div style="position: absolute; bottom: 5px; right: 0px;">
+              <a href="https://github.com/ritikkanotra/devpost" target="_blank" style="position: absolute; right: 70px;">
+                <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
+                  <img src="https://img.icons8.com/fluent/48/000000/github.png" style="height: 32px;
+                  width: 32px" />
+                </div>
+              </a>
+              <a href="http://devpost1.herokuapp.com/" target="_blank" style="display: inline-block;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px;">
                     <img src="https://img.icons8.com/color/48/000000/domain.png" style="height: 32px;
                     width: 32px" />
