--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 
         <div class="project-entity my-card">
           <div style="position: relative;">
-            <img src="https://devpost1.herokuapp.com/static/assets/images/187_banner_u.png">
+            <img src="devpost_banner.jpg">
             <!-- <img src="https://image.freepik.com/free-vector/online-library-app-reading-banner_33099-1733.jpg"> -->
           </div>
           <div class="content">
