minor bug fixes

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 
         <div class="project-entity my-card">
           <div style="position: relative;">
-            <img src="ritikkanotra_banner.png">
+            <img src="ritikkanotra_banner.jpg">
           </div>
           <div class="content">
             
@@ -433,7 +433,7 @@
 
         <div class="project-entity my-card">
           <div style="position: relative;">
-            <img src="ritikkanotra_banner.png">
+            <img src="ritikkanotra_banner.jpg">
           </div>
           <div class="content">
             
