--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <a class="nav-item nav-link js-scroll-trigger" href="#achievements">Achievements</a>
           <a class="nav-item nav-link js-scroll-trigger" href="#projects">Projects</a>
           <a class="nav-item nav-link js-scroll-trigger" href="#contact">Contact</a>
+          <a class="nav-item nav-link js-scroll-trigger my-card skill-card resume-download-btn" href="https://urlf.in/ritikkanotra_resume" target="_blank">Resume</a>
           <!-- <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
         </div>
       </div>
