--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
         PHP
       </div>
       <div class="skill-card my-card">
+        Kotlin
+      </div>
+      <div class="skill-card my-card">
         Android Studio
       </div>
       <div class="skill-card my-card">
@@ -247,14 +250,17 @@
       <h2 class="heading">Achievements & Certificates</h2>
       <!-- <img src="assets/certificates/0001 (1).jpg" alt=""> -->
       <div class="MagicScroll">
-        <img src="assets/certificates/0001.jpg" />
-        <img src="assets/certificates/0002.jpg" />
-        <img src="assets/certificates/0003.jpg" />
-        <img src="assets/certificates/0001 (1).jpg" />
-        <img src="assets/certificates/0001 (2).jpg" alt="">
-        <img src="assets/certificates/0001 (3).jpg" alt="">
-        <img src="assets/certificates/0001 (4).jpg" alt="">
-        <img src="assets/certificates/1588734294270_37[1].png" alt="">
+        <img src="assets/certificates/CS50x.png" />
+        <img src="assets/certificates/Kickstart_19_D.jpg" />
+        <img src="assets/certificates/coursera-gcp.jpg" />
+        <img src="assets/certificates/30-days-of-gcp.jpg" />
+        <img src="assets/certificates/certificate_of_event_code_kaze.jpg" alt="">
+        <img src="assets/certificates/Code_Jam_19_Q_Round.jpg" alt="">
+        <img src="assets/certificates/code-of-geeks-deepcode-2.jpg" alt="">
+        <img src="assets/certificates/devfest-india-2020.jpg" alt="">
+        <img src="assets/certificates/DSC_Code_the_Covid.png" alt="">
+        <img src="assets/certificates/GFG_Placement_Preparation_Participation_certificate.jpg" alt="">
+        <img src="assets/certificates/IIT-Kharagpur EAD-18.jpg" alt="">
       </div>
     </div>
     <div class="projects category" id="projects">
@@ -271,6 +277,7 @@
             <h3 style="font-weight: bolder;">Coronavirus Tracker</h3>
             <ul>
               
+              <li><b>Dark Mode</b> (Now available)</li>
               <li>Android Application</li>
               <li>Application Programming Interface(API)</li>
               <li>Minimalist and Material Design</li>
