Compress Images for faster loading.

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <h2 class="heading">Achievements & Certificates</h2>
       <!-- <img src="assets/certificates/0001 (1).jpg" alt=""> -->
       <div class="MagicScroll">
-        <img src="assets/certificates/CS50x.png" />
+        <img src="assets/certificates/CS50x.jpg" />
         <img src="assets/certificates/Kickstart_19_D.jpg" />
         <img src="assets/certificates/coursera-gcp.jpg" />
         <img src="assets/certificates/30-days-of-gcp.jpg" />
@@ -258,7 +258,7 @@
         <img src="assets/certificates/Code_Jam_19_Q_Round.jpg" alt="">
         <img src="assets/certificates/code-of-geeks-deepcode-2.jpg" alt="">
         <img src="assets/certificates/devfest-india-2020.jpg" alt="">
-        <img src="assets/certificates/DSC_Code_the_Covid.png" alt="">
+        <img src="assets/certificates/DSC_Code_the_Covid.jpg" alt="">
         <img src="assets/certificates/GFG_Placement_Preparation_Participation_certificate.jpg" alt="">
         <img src="assets/certificates/IIT-Kharagpur EAD-18.jpg" alt="">
       </div>
