--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
 
     
 
-    //paste this code under the head tag or in a separate js file.
-      // Wait for window load
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FMFM4GVZW"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3FMFM4GVZW');
+    </script>
       
 
   </head>
