Update Google Analytics

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FMFM4GVZW"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5R7C546KMM"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-3FMFM4GVZW');
+      gtag('config', 'G-5R7C546KMM');
     </script>
       
 
