--- a/index.html
+++ b/index.html
@@ -560,7 +560,9 @@
     </div>
     <div class="card category contact" id="contact">
       <h2 class="heading">Wanna have a talk?</h2>
-      <form action="http://csbookshelf.000webhostapp.com/portfolio/send_message.php" method="POST">
+      <!-- <form action="https://csbookshelf.000webhostapp.com/portfolio/send_message.php" method="POST"> -->
+      <form action="https://ritikkanotra-extra.herokuapp.com/sendmail.php" method="POST">
+      <!-- <form action="https://observable-loaf.000webhostapp.com/sendmail.php" method="POST"> -->
         <div class="form-group row">
           <div class="col">
             <input type="text" placeholder="Name*" class="form-control" name="name" required>
@@ -585,7 +587,7 @@
           </div>
         </div>
         <div class="horizontal-center">
-          <button type="submit" class="btn btn-warning">Send Message</button>
+          <button id="submitBtn" type="submit" name="submit" class="btn btn-warning">Send Message</button>
         </div>
       </form>
     </div>
