--- a/index.html
+++ b/index.html
@@ -561,35 +561,36 @@
     <div class="card category contact" id="contact">
       <h2 class="heading">Wanna have a talk?</h2>
       <!-- <form action="https://csbookshelf.000webhostapp.com/portfolio/send_message.php" method="POST"> -->
-      <form action="https://ritikkanotra-extra.herokuapp.com/sendmail.php" method="POST">
+      <!-- <form action="https://ritikkanotra-extra.herokuapp.com/sendmail.php" method="POST"> -->
       <!-- <form action="https://observable-loaf.000webhostapp.com/sendmail.php" method="POST"> -->
+      <!-- <form action="sendMessage()"> -->
         <div class="form-group row">
           <div class="col">
-            <input type="text" placeholder="Name*" class="form-control" name="name" required>
+            <input id = "c_name" type="text" placeholder="Name*" class="form-control" name="name" required>
           </div>
         </div>
         <div class="form-group row">
           <div class="col">
-            <input type="email" placeholder="Email*" class="form-control" name="email" required>
+            <input id = "c_email" type="email" placeholder="Email*" class="form-control" name="email" required>
           </div>
           <div class="col">
-            <input type="tel" placeholder="Contact No." class="form-control" name="tel">
-          </div>
-        </div>
-        <div class="form-group row">
-          <div class="col">
-            <input type="text" placeholder="Subject* (max 75 chars.)" class="form-control" name="subject" required>
+            <input id = "c_phone" type="tel" placeholder="Contact No." class="form-control" name="tel">
           </div>
         </div>
         <div class="form-group row">
           <div class="col">
-            <textarea class="form-control" rows="5" placeholder="Message*" name="message" required></textarea>
+            <input id = "c_subject" type="text" placeholder="Subject* (max 75 chars.)" class="form-control" name="subject" required>
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="col">
+            <textarea id = "c_message" class="form-control" rows="5" placeholder="Message*" name="message" required></textarea>
           </div>
         </div>
         <div class="horizontal-center">
-          <button id="submitBtn" type="submit" name="submit" class="btn btn-warning">Send Message</button>
+          <button id="submitBtn" class="btn btn-warning" onclick="sendMessage()">Send Message</button>
         </div>
-      </form>
+      <!-- </form> -->
     </div>
     <footer>
       © Made with ❤️ by <a href="https://ritikkanotra.me/" target="_blank"><img src="ritikkanotra_logo_light.png" style="height: 20px; width: auto; margin-bottom: 10px; margin-left: 3px;" alt=""></a>
@@ -613,7 +614,75 @@
     });
     </script>  -->
 
+    <!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
 
+    <!-- Firebase -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-analytics.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-database.js"></script> 
+
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyDCaVV5nvk5FKT1Y9IRHae8zxhw9GBYWBY",
+        authDomain: "ritikkanotra-portfolio.firebaseapp.com",
+        databaseURL: "https://ritikkanotra-portfolio-default-rtdb.firebaseio.com",
+        projectId: "ritikkanotra-portfolio",
+        storageBucket: "ritikkanotra-portfolio.appspot.com",
+        messagingSenderId: "1068654131452",
+        appId: "1:1068654131452:web:4a2d0b98489009255eff79",
+        measurementId: "G-JZD5TP8H08"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+
+      //Realtime Database
+      var database = firebase.database()
+
+      function sendMessage() {
+        var c_name = document.getElementById('c_name').value;
+        var c_email = document.getElementById('c_email').value;
+        var c_phone = document.getElementById('c_phone').value;
+        var c_subject = document.getElementById('c_subject').value;
+        var c_message = document.getElementById('c_message').value;
+
+        
+
+        //var counter = database.ref.child("counter").get()
+        var current_date = new Date();
+
+        //alert(current_date);
+
+        database.ref("contact-messages/" + current_date).set({
+          Name: c_name,
+          Email: c_email,
+          Phone: c_phone,
+          Subject: c_subject,
+          Message: c_message
+        });
+
+        alert("Message Sent. Ritik will contact you soon. Press OK");
+        //alert("confirm");
+
+
+        
+      }
+
+
+
+    </script>
+
+
+
+
+    <!-- Firebase -->
 
     <script>
 
