fix contact font size, minor UI changes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -85,7 +88,7 @@
             </span>
           </div>
           </h2>
-          <br>
+          <!-- <br> -->
           <div class="social-media social-media-card horizontal-center my-card">
             <a href="mailto:ritikkanotra@gmail.com" target="_blank"><img src="email_icon_2.png" alt="Email" /></a>
             <a href="https://wa.me/+916388490224" target="_blank"><img src="wa_icon.png" alt="Whatsapp" /></a>
