--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
             </span>
           </div>
           </h2>
+
+          <div class="br-mobile"><br></div>
           <!-- <br> -->
+
+
           <div class="social-media social-media-card horizontal-center my-card">
             <a href="mailto:ritikkanotra@gmail.com" target="_blank"><img src="email_icon_2.png" alt="Email" /></a>
             <a href="https://wa.me/+916388490224" target="_blank"><img src="wa_icon.png" alt="Whatsapp" /></a>
@@ -298,12 +302,12 @@
             </ul>
             <!-- <a href="">more...</a> -->
             <div style="position: absolute; bottom: 5px; right: 0px;">
-              <a href="https://github.com/ritikkanotra/coronavirus-tracker-android-app" target="_blank" style="position: absolute; right: 70px;">
+              <!-- <a href="https://github.com/ritikkanotra/coronavirus-tracker-android-app" target="_blank" style="position: absolute; right: 70px;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
                   <img src="https://img.icons8.com/fluent/48/000000/github.png" style="height: 32px;
                   width: 32px" />
                 </div>
-              </a>
+              </a> -->
               <a href="https://urlf.in/coronavirus_tracker_apk" target="_blank" style="display: inline-block;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px;">
                     <img src="https://img.icons8.com/color/48/000000/android-os.png" style="height: 32px;
@@ -333,10 +337,10 @@
             <!-- <a href="">more...</a> -->
             <div style="position: absolute; bottom: 5px; right: 0px;">
               <a href="https://play.google.com/store/apps/details?id=com.app.kalakaar" target="_blank" style="display: inline-block;">
-                <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
-                  <img src="https://img.icons8.com/color/48/000000/google-play.png" style="height: 32px;
+                <!-- <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px"> -->
+                  <img src="gp_2.png" style="height: 32px;
                   width: 32px" />
-                </div>
+                <!-- </div> -->
               </a>
               <!-- <a href="https://google.com" style="display: inline-block;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px;">
@@ -368,10 +372,10 @@
             <!-- <a href="">more...</a> -->
             <div style="position: absolute; bottom: 5px; right: 0px;">
               <a href="https://play.google.com/store/apps/details?id=com.pvaindia.filemanager" target="_blank" style="display: inline-block;">
-                <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
-                  <img src="https://img.icons8.com/color/48/000000/google-play.png" style="height: 32px;
+                <!-- <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px"> -->
+                  <img src="gp_2.png" style="height: 32px;
                   width: 32px" />
-                </div>
+                <!-- </div> -->
               </a>
               <!-- <a href="https://google.com" style="display: inline-block;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px;">
@@ -385,7 +389,7 @@
 
         <div class="project-entity my-card">
           <div style="position: relative;">
-            <img src="eventauth_banner.png">
+            <img src="eventauth_banner_1.png">
           </div>
           <div class="content">
 
@@ -401,17 +405,23 @@
             </ul>
             <!-- <a href="">more...</a> -->
             <div style="position: absolute; bottom: 5px; right: 0px;">
-              <a href="https://google.com" target="_blank" style="position: absolute; right: 70px;">
+              <!-- <a href="https://google.com" target="_blank" style="position: absolute; right: 70px;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
                   <img src="https://img.icons8.com/fluent/48/000000/github.png" style="height: 32px;
                   width: 32px" />
                 </div>
-              </a>
-              <a href="https://google.com" target="_blank" style="display: inline-block;">
+              </a> -->
+              <!-- <a href="https://google.com" target="_blank" style="display: inline-block;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px;">
                     <img src="https://img.icons8.com/color/48/000000/android-os.png" style="height: 32px;
                     width: 32px" />
                 </div>
+              </a> -->
+              <a href="https://play.google.com/store/apps/details?id=com.appodex.eventauth" target="_blank" style="display: inline-block;">
+                <!-- <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px"> -->
+                  <img src="gp_2.png" style="height: 32px;
+                  width: 32px" />
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -434,7 +444,7 @@
               <li>Dedicated automatic update checker on each startup</li>
             </ul>
             <!-- <a href="">more...</a> -->
-            <div style="position: absolute; bottom: 5px; right: 0px;">
+            <!-- <div style="position: absolute; bottom: 5px; right: 0px;">
               <a href="https://google.com" target="_blank" style="position: absolute; right: 70px;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
                   <img src="https://img.icons8.com/fluent/48/000000/github.png" style="height: 32px;
@@ -447,13 +457,13 @@
                     width: 32px" />
                 </div>
               </a>
-            </div>
+            </div> -->
           </div>
         </div>
 
         <div class="project-entity my-card">
           <div style="position: relative;">
-            <img src="ritikkanotra_banner.jpg">
+            <img src="ritikkanotra_banner_1.png">
           </div>
           <div class="content">
 
@@ -469,12 +479,12 @@
             </ul>
             <!-- <a href="">more...</a> -->
             <div style="position: absolute; bottom: 5px; right: 0px;">
-              <a href="https://github.com/ritikkanotra/ritikkanotra.github.io" target="_blank" style="position: absolute; right: 70px;">
+              <!-- <a href="https://github.com/ritikkanotra/ritikkanotra.github.io" target="_blank" style="position: absolute; right: 70px;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
                   <img src="https://img.icons8.com/fluent/48/000000/github.png" style="height: 32px;
                   width: 32px" />
                 </div>
-              </a>
+              </a> -->
               <a href="https://ritikkanotra.me" target="_blank" style="display: inline-block;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px;">
                     <img src="https://img.icons8.com/color/48/000000/domain.png" style="height: 32px;
@@ -505,12 +515,12 @@
             </ul>
             <!-- <a href="">more...</a> -->
             <div style="position: absolute; bottom: 5px; right: 0px;">
-              <a href="https://github.com/ritikkanotra/csbookshelf" target="_blank" style="position: absolute; right: 70px;">
+              <!-- <a href="https://github.com/ritikkanotra/csbookshelf" target="_blank" style="position: absolute; right: 70px;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
                   <img src="https://img.icons8.com/fluent/48/000000/github.png" style="height: 32px;
                   width: 32px" />
                 </div>
-              </a>
+              </a> -->
               <a href="http://csbookshelf.herokuapp.com/" target="_blank" style="display: inline-block;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px;">
                     <img src="https://img.icons8.com/color/48/000000/domain.png" style="height: 32px;
