--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     Ritik Kanotra 👋
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="fav_icon.png" />
+    <link rel="icon" href="assets/images/misc/fav_icon.png" />
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    
+    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <link rel="stylesheet" href="https://ritikkanotra-extra.netlify.app/raw/ritikkanotra-portfolio/styles_dark_special.css">
+    
     <link type="text/css" rel="stylesheet" href="magicscroll/magicscroll.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=MuseoModerno&display=swap" rel="stylesheet">
@@ -75,7 +78,7 @@
       <div class="intro-bg-small">
       </div>
       <div class="intro-content content">
-        <img src="rk_bitmoji_edited_1.jpg">
+        <img src="assets/images/misc/rk_bitmoji_edited_1.jpg">
         <h2 style="font-weight: bolder;">
         Ritik Kanotra <div class="coder-tag"><i>(@coder6147)</i></div>
         </h2>
@@ -96,12 +99,12 @@
 
 
           <div class="social-media social-media-card horizontal-center my-card">
-            <a href="mailto:ritikkanotra@gmail.com" target="_blank"><img src="email_icon_2.png" alt="Email" /></a>
-            <a href="https://wa.me/+916388490224" target="_blank"><img src="wa_icon.png" alt="Whatsapp" /></a>
-            <a href="https://www.github.com/ritikkanotra" target="_blank"><img src="github_icon.png" alt="GitHub"/></a>
+            <a href="mailto:ritikkanotra@gmail.com" target="_blank"><img src="assets/images/sm_icons/email_icon_2.png" alt="Email" /></a>
+            <a href="https://wa.me/+916388490224" target="_blank"><img src="assets/images/sm_icons/wa_icon.png" alt="Whatsapp" /></a>
+            <a href="https://www.github.com/ritikkanotra" target="_blank"><img src="assets/images/sm_icons/github_icon.png" alt="GitHub"/></a>
             <!-- <a href="https://www.codeivation.blogspot.com"><img src="https://img.icons8.com/material-two-tone/48/000000/blog.png" alt="Blog"/></a> -->
-            <a href="https://www.linkedin.com/in/ritikkanotra/" target="_blank"><img src="linkedin_icon.png" alt="Linkedin" /></a>
-            <a href="https://twitter.com/ritikkanotra" target="_blank"><img src="twitter_icon.png" alt="Twitter" /></a>
+            <a href="https://www.linkedin.com/in/ritikkanotra/" target="_blank"><img src="assets/images/sm_icons/linkedin_icon.png" alt="Linkedin" /></a>
+            <a href="https://twitter.com/ritikkanotra" target="_blank"><img src="assets/images/sm_icons/twitter_icon.png" alt="Twitter" /></a>
           </div>
 
         </div>
@@ -121,7 +124,7 @@
         <table class="exp-table">
           <tr>
             <td class="comp-detail-col-small" style="text-align: center;" >
-              <img class="my-card comp-logo" src="pva_logo.jpg"><br>
+              <img class="my-card comp-logo" src="assets/images/exp_company_logo/pva_logo.jpg"><br>
               <b>Parallax Virtual Arts</b>
               <br>
               (Android Developer)
@@ -131,7 +134,7 @@
           </tr>
           <tr>
             <td class="comp-detail-col-big" style="text-align: center;" >
-              <img class="my-card comp-logo" src="pva_logo.jpg"><br>
+              <img class="my-card comp-logo" src="assets/images/exp_company_logo/pva_logo.jpg"><br>
               <b>Parallax Virtual Arts</b>
               <br>
               (Android Developer)
@@ -333,7 +336,7 @@
 
         <div class="project-entity my-card">
           <div style="position: relative;">
-            <img src="dummy_project_img.jpg">
+            <img src="assets/images/project_images/dummy_project_img.jpg">
           </div>
           <div class="content">
 
@@ -368,7 +371,7 @@
 
         <div class="project-entity my-card">
           <div style="position: relative;">
-            <img src="kalakaar_banner.jpg">
+            <img src="assets/images/project_images/kalakaar_banner.jpg">
           </div>
           <div class="content">
 
@@ -385,7 +388,7 @@
             <div style="position: absolute; bottom: 5px; right: 0px;">
               <a href="https://play.google.com/store/apps/details?id=com.app.kalakaar" target="_blank" style="display: inline-block;">
                 <!-- <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px"> -->
-                  <img src="gp_2.png" style="height: 32px;
+                  <img src="assets/images/misc/gp_2.png" style="height: 32px;
                   width: 32px" />
                 <!-- </div> -->
               </a>
@@ -403,7 +406,7 @@
 
         <div class="project-entity my-card">
           <div style="position: relative;">
-            <img src="atz_file_banner.png">
+            <img src="assets/images/project_images/atz_file_banner.png">
           </div>
           <div class="content">
 
@@ -420,7 +423,7 @@
             <div style="position: absolute; bottom: 5px; right: 0px;">
               <a href="https://play.google.com/store/apps/details?id=com.pvaindia.filemanager" target="_blank" style="display: inline-block;">
                 <!-- <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px"> -->
-                  <img src="gp_2.png" style="height: 32px;
+                  <img src="assets/images/misc/gp_2.png" style="height: 32px;
                   width: 32px" />
                 <!-- </div> -->
               </a>
@@ -436,7 +439,7 @@
 
         <div class="project-entity my-card">
           <div style="position: relative;">
-            <img src="eventauth_banner_1.png">
+            <img src="assets/images/project_images/eventauth_banner_1.png">
           </div>
           <div class="content">
 
@@ -466,7 +469,7 @@
               </a> -->
               <a href="https://play.google.com/store/apps/details?id=com.appodex.eventauth" target="_blank" style="display: inline-block;">
                 <!-- <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px"> -->
-                  <img src="gp_2.png" style="height: 32px;
+                  <img src="assets/images/misc/gp_2.png" style="height: 32px;
                   width: 32px" />
                 <!-- </div> -->
               </a>
@@ -476,7 +479,7 @@
 
         <div class="project-entity my-card">
           <div style="position: relative;">
-            <img src="ritikkanotra_banner.jpg">
+            <img src="assets/images/project_images/ritikkanotra_banner.jpg">
           </div>
           <div class="content">
 
@@ -510,7 +513,7 @@
 
         <div class="project-entity my-card">
           <div style="position: relative;">
-            <img src="ritikkanotra_banner_1.png">
+            <img src="assets/images/project_images/ritikkanotra_banner_1.png">
           </div>
           <div class="content">
 
@@ -580,7 +583,7 @@
 
         <div class="project-entity my-card">
           <div style="position: relative;">
-            <img src="devpost_banner.jpg">
+            <img src="assets/images/project_images/devpost_banner.jpg">
             <!-- <img src="https://image.freepik.com/free-vector/online-library-app-reading-banner_33099-1733.jpg"> -->
           </div>
           <div class="content">
@@ -653,7 +656,7 @@
       <!-- </form> -->
     </div>
     <footer>
-      © Made with ❤️ by <a href="https://ritikkanotra.me/" target="_blank"><img src="ritikkanotra_logo_light.png" style="height: 20px; width: auto; margin-bottom: 10px; margin-left: 3px;" alt=""></a>
+      © Made with ❤️ by <a href="https://ritikkanotra.me/" target="_blank"><img src="assets/images/misc/ritikkanotra_logo_light.png" style="height: 20px; width: auto; margin-bottom: 10px; margin-left: 3px;" alt=""></a>
     </footer>
     <!-- --------------------------------------------------------------------------------------------------------------------------------------- -->
     <script type="text/javascript" src="script.js"></script>
