fix intro text not working

--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
       © Made with ❤️ by <a href="https://ritikkanotra.me/" target="_blank"><img src="assets/images/misc/ritikkanotra_logo_light.png" style="height: 20px; width: auto; margin-bottom: 10px; margin-left: 3px;" alt=""></a>
     </footer>
     <!-- --------------------------------------------------------------------------------------------------------------------------------------- -->
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="scripts/script.js"></script>
     <script type="text/javascript" src="magicscroll/magicscroll.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> -->
 
