change social media icons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
     <!-- <link rel="stylesheet" href="styles.css"> -->
     <link rel="stylesheet" href="https://ritikkanotra-extra.netlify.app/raw/ritikkanotra-portfolio/styles_dark_special.css">
+    <!-- <link rel="stylesheet" href="file:///D:/DATA/version-control/ritikkanotra-extra/raw/ritikkanotra-portfolio/styles.css"> -->
     
     <link type="text/css" rel="stylesheet" href="magicscroll/magicscroll.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -99,12 +100,12 @@
 
 
           <div class="social-media social-media-card horizontal-center my-card">
-            <a href="mailto:ritikkanotra@gmail.com" target="_blank"><img src="assets/images/sm_icons/email_icon_2.png" alt="Email" /></a>
-            <a href="https://wa.me/+916388490224" target="_blank"><img src="assets/images/sm_icons/wa_icon.png" alt="Whatsapp" /></a>
-            <a href="https://www.github.com/ritikkanotra" target="_blank"><img src="assets/images/sm_icons/github_icon.png" alt="GitHub"/></a>
+            <a href="mailto:ritikkanotra@gmail.com" target="_blank"><img src="assets/images/sm_icons_dark/google-3560850.svg" alt="Email" /></a>
+            <a href="https://wa.me/+916388490224" target="_blank"><img src="assets/images/sm_icons_dark/whatsapp-3560884.svg" alt="Whatsapp" /></a>
+            <a href="https://www.github.com/ritikkanotra" target="_blank"><img src="assets/images/sm_icons_dark/github-3560849.svg" alt="GitHub"/></a>
             <!-- <a href="https://www.codeivation.blogspot.com"><img src="https://img.icons8.com/material-two-tone/48/000000/blog.png" alt="Blog"/></a> -->
-            <a href="https://www.linkedin.com/in/ritikkanotra/" target="_blank"><img src="assets/images/sm_icons/linkedin_icon.png" alt="Linkedin" /></a>
-            <a href="https://twitter.com/ritikkanotra" target="_blank"><img src="assets/images/sm_icons/twitter_icon.png" alt="Twitter" /></a>
+            <a href="https://www.linkedin.com/in/ritikkanotra/" target="_blank"><img src="assets/images/sm_icons_dark/linkedin-3560871.svg" alt="Linkedin" /></a>
+            <a href="https://twitter.com/ritikkanotra" target="_blank"><img src="assets/images/sm_icons_dark/twitter-3560889.svg" alt="Twitter" /></a>
           </div>
 
         </div>
