add more certificates

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     
     <!-- <link rel="stylesheet" href="styles.css"> -->
-    <link id="theme-link" rel="stylesheet" href="https://ritikkanotra-extra.netlify.app/raw/ritikkanotra-portfolio/styles.css">
-    <!-- <link rel="stylesheet" href="file:///D:/DATA/version-control/ritikkanotra-extra/raw/ritikkanotra-portfolio/styles.css"> -->
-    <link id="dark-theme-link" rel="stylesheet" href="https://ritikkanotra-extra.netlify.app/raw/ritikkanotra-portfolio/styles_dark.css" disabled>
-    <!-- <link id="dark-theme-link" rel="stylesheet" href="file:///D:/DATA/version-control/ritikkanotra-extra/raw/ritikkanotra-portfolio/styles_dark.css" disabled> -->
+    <!-- <link id="theme-link" rel="stylesheet" href="https://ritikkanotra-extra.netlify.app/raw/ritikkanotra-portfolio/styles.css"> -->
+    <link rel="stylesheet" href="file:///D:/DATA/version-control/ritikkanotra-extra/raw/ritikkanotra-portfolio/styles.css">
+    <!-- <link id="dark-theme-link" rel="stylesheet" href="https://ritikkanotra-extra.netlify.app/raw/ritikkanotra-portfolio/styles_dark.css" disabled> -->
+    <link id="dark-theme-link" rel="stylesheet" href="file:///D:/DATA/version-control/ritikkanotra-extra/raw/ritikkanotra-portfolio/styles_dark.css" disabled>
     
     <!-- Dark mode toggle css -->
     <link rel="stylesheet" href="dm-toggle/toggle.css">
@@ -400,6 +400,13 @@
         <div class="carousel-cell"><img src="assets/certificates/coursera-gcp.jpg" /></div>
         <div class="carousel-cell"><img src="assets/certificates/30-days-of-gcp.jpg" /></div>
         <div class="carousel-cell"><img src="assets/certificates/certificate_of_event_code_kaze.jpg" alt=""></div>
+        <div class="carousel-cell"><img src="assets/certificates/Code_Jam_19_Q_Round.jpg" alt=""></div>
+        <div class="carousel-cell"><img src="assets/certificates/code-of-geeks-deepcode-2.jpg" alt=""></div>
+        <div class="carousel-cell"><img src="assets/certificates/devfest-india-2020.jpg" alt=""></div>
+        <div class="carousel-cell"><img src="assets/certificates/DSC_Code_the_Covid.jpg" alt=""></div>
+        <div class="carousel-cell"><img src="assets/certificates/GFG_Placement_Preparation_Participation_certificate.jpg" alt=""></div>
+        <div class="carousel-cell"><img src="assets/certificates/IIT-Kharagpur EAD-18.jpg" alt=""></div>
+        <!-- <div class="carousel-cell"></div> -->
       </div>
 
 
