--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     
     <!-- <link rel="stylesheet" href="styles.css"> -->
-    <!-- <link id="theme-link" rel="stylesheet" href="https://ritikkanotra-extra.netlify.app/raw/ritikkanotra-portfolio/styles.css"> -->
-    <link rel="stylesheet" href="file:///D:/DATA/version-control/ritikkanotra-extra/raw/ritikkanotra-portfolio/styles.css">
-    <!-- <link id="dark-theme-link" rel="stylesheet" href="https://ritikkanotra-extra.netlify.app/raw/ritikkanotra-portfolio/styles_dark.css" disabled> -->
-    <link id="dark-theme-link" rel="stylesheet" href="file:///D:/DATA/version-control/ritikkanotra-extra/raw/ritikkanotra-portfolio/styles_dark.css" disabled>
+    <link id="theme-link" rel="stylesheet" href="https://ritikkanotra-extra.netlify.app/raw/ritikkanotra-portfolio/styles.css">
+    <!-- <link rel="stylesheet" href="file:///D:/DATA/version-control/ritikkanotra-extra/raw/ritikkanotra-portfolio/styles.css"> -->
+    <link id="dark-theme-link" rel="stylesheet" href="https://ritikkanotra-extra.netlify.app/raw/ritikkanotra-portfolio/styles_dark.css" disabled>
+    <!-- <link id="dark-theme-link" rel="stylesheet" href="file:///D:/DATA/version-control/ritikkanotra-extra/raw/ritikkanotra-portfolio/styles_dark.css" disabled> -->
     
     <!-- Dark mode toggle css -->
     <link rel="stylesheet" href="dm-toggle/toggle.css">
